<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_quantity"
        style="@style/TextTheme"
        android:text="@string/quantity"
        app:layout_constraintBottom_toTopOf="@id/text_quantity_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_quantity_number"
        style="@style/NumberTheme"
        android:text="@string/quantity_number"
        app:layout_constraintBottom_toTopOf="@id/text_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_quantity" />

    <TextView
        android:id="@+id/text_price"
        style="@style/TextTheme"
        android:text="@string/price"
        app:layout_constraintBottom_toTopOf="@id/text_price_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_quantity_number" />

    <TextView
        android:id="@+id/text_price_number"
        style="@style/NumberTheme"
        android:text="@string/price_number"
        app:layout_constraintBottom_toTopOf="@id/button_order"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_price" />

    <Button
        android:id="@+id/button_order"
        style="@style/ButtonTheme"
        android:onClick="submitOrder"
        android:text="@string/order"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_price_number" />

</androidx.constraintlayout.widget.ConstraintLayout>
